--- a/expanding-cards/style.css
+++ b/expanding-cards/style.css
@@ -10,6 +10,7 @@ body{
   justify-content: center;
   overflow: hidden;
   height: 100vh;
+  background-color: black;
 }
 .container{
   display: flex;
